--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -1,27 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:600&amp;display=swap");
 
-.todoInput {
+.input {
   position: relative;
   width: 1.5em;
   height: 1.5em;
@@ -35,23 +14,22 @@ a {
   transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 }
 
-.todoInput[type="checkbox"]:checked {
+.input[type="checkbox"]:checked {
   background: #0070f3;
 }
 
-.todoInput[type="checkbox"]:checked ~ label::before {
+.input[type="checkbox"]:checked ~ label::before {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
-.todoLabel {
+.label {
   position: relative;
   cursor: pointer;
   font-size: 1.6em;
   font-weight: 600;
-  padding: 0 0.25em 0;
+  padding: 0 0.35em 0;
   user-select: none;
-  transition: 3s;
 }
-.todoLabel {
+.label::before {
   position: absolute;
   content: attr(data-content);
   color: #9c9e9f;
@@ -59,5 +37,5 @@ a {
   text-decoration: line-through;
   text-decoration-thickness: 3px;
   text-decoration-color: #363839;
-  /* transition: clip-path 1000ms cubic-bezier(0.25, 0.46, 0.45, 0.94); */
+  transition: clip-path 200ms cubic-bezier(0.45, 0.46, 0.45, 0.94);
 }
