--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,12 +3,10 @@
 }
 
 .main {
+  padding: 1rem;
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -42,7 +40,8 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-weight: 600;
+  font-size: 3rem;
 }
 
 .title,
@@ -51,25 +50,32 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
+  background: #f0f0f0;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  padding: 0.7rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .grid {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
   max-width: 800px;
 }
 
@@ -78,11 +84,16 @@
   padding: 1.5rem;
   text-align: left;
   color: inherit;
+  cursor: pointer;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  min-width: 300px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card:hover,
@@ -102,9 +113,7 @@
   font-size: 1.25rem;
   line-height: 1.5;
 }
-
-.logo {
-  height: 1em;
+.icon {
   margin-left: 0.5rem;
 }
 
