--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -1,5 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:600&amp;display=swap");
 
+.greeting {
+  font-weight: 500;
+  font-size: 1.9rem;
+}
+.addInput {
+  text-align: center;
+  font-size: 1.3rem;
+  border: 2px solid black;
+  padding: 0.4rem;
+  margin: 0.4rem;
+  border-radius: 0.4rem;
+}
+.userImg {
+  width: 2.5rem;
+  border-radius: 100%;
+}
 .input {
   position: relative;
   width: 1.5em;
@@ -9,7 +25,6 @@
   border-radius: 4px;
   appearance: none;
   outline: 0;
-  top: 0.3rem;
   cursor: pointer;
   transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 }
@@ -38,4 +53,32 @@
   text-decoration-thickness: 3px;
   text-decoration-color: #363839;
   transition: clip-path 200ms cubic-bezier(0.45, 0.46, 0.45, 0.94);
+}
+.remove {
+  display: flex;
+  align-items: center;
+  position: relative;
+  right: 0.4rem;
+}
+
+.sort {
+  display: flex;
+  align-items: center;
+}
+
+.sortButton {
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: 1rem 0.6rem;
+  padding: 0.2rem;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.sortButton:hover {
+  color: #0070f3;
+  border: 2px solid #0070f3;
+  transform: translateY(-0.15rem);
+  transition: ease-in-out 100ms;
 }
