--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,11 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   padding: 1rem;
   min-height: 100vh;
+}
+.header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -80,20 +79,17 @@
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
   text-align: left;
   color: inherit;
-  cursor: pointer;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   min-width: 300px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 90% 10%;
+  margin: 1rem;
 }
 
 .card:hover,
