--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 a {
@@ -59,5 +59,5 @@ a {
   text-decoration: line-through;
   text-decoration-thickness: 3px;
   text-decoration-color: #363839;
-  /* transition: clip-path 1000ms cubic-bezier(0.25, 0.46, 0.45, 0.94); */
+  transition: clip-path 1000ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
