--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -41,20 +41,27 @@
 .label {
   position: relative;
   cursor: pointer;
-  font-size: 1.6em;
+  font-size: 1.3em;
   font-weight: 600;
   padding: 0 0.35em 0;
   user-select: none;
+  width: 100%;
+  height: 100%;
 }
-.label::before {
-  position: absolute;
+.completed {
   content: attr(data-content);
+  cursor: pointer;
+
   color: #9c9e9f;
-  clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
   text-decoration: line-through;
-  text-decoration-thickness: 3px;
   text-decoration-color: #363839;
   transition: clip-path 200ms cubic-bezier(0.45, 0.46, 0.45, 0.94);
+  font-size: 1.3em;
+  padding: 0 0.35em 0;
+
+  width: fit-content;
+  height: fit-content;
+  font-weight: 600;
 }
 .remove {
   display: flex;
@@ -86,5 +93,5 @@
 }
 
 .highlightButton {
-  box-shadow: 0 0 2px 2px #6497b1, 0 0 5px 5px #005b96, 0px 0px 2px 2px #03396c;
+  box-shadow: 0 0 5px 5px #3792cb, 0 0 2px 2px #296bfe;
 }
