--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,8 +2,32 @@
   padding: 1rem;
   min-height: 100vh;
 }
+
+.mainContainer {
+  display: flex;
+  justify-content: center;
+}
+.mainSection {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  max-width: 1100px;
+  margin: 2rem auto;
+}
+@media screen and (max-width: 640px) {
+  .mainSection {
+    grid-template-columns: 1fr;
+  }
+}
+.listSection {
+  font-size: 1.4rem;
+}
+.listHeader {
+  font-size: 1.75rem;
+  border-bottom: black 2px solid;
+}
+
 .header {
-  width: 100%;
+  width: 90vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,7 +99,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 800px;
+  max-width: 1100px;
 }
 
 .card {
