--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -5,12 +5,14 @@
   font-size: 1.9rem;
 }
 .addInput {
-  text-align: center;
-  font-size: 1.3rem;
+  font-size: 0.7rem;
+  width: 6rem;
   border: 2px solid black;
   padding: 0.4rem;
   margin: 0.4rem;
   border-radius: 0.4rem;
+  resize: none;
+  overflow: auto;
 }
 
 .userImg {
@@ -69,7 +71,16 @@
   position: relative;
   right: 0.4rem;
 }
-
+.sortContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .sortContainer {
+    flex-direction: column;
+  }
+}
 .sort {
   display: flex;
   align-items: center;
