--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,18 +8,26 @@
   justify-content: center;
 }
 .mainSection {
+  box-shadow: 1px 3px 11px 4px rgba(0, 0, 0, 0.75);
+  padding: 1rem 2rem 1rem 1rem;
   display: grid;
   grid-template-columns: 20% 80%;
   max-width: 1100px;
+  gap: 1rem;
   margin: 2rem auto;
+  min-height: 80vh;
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 400px) {
   .mainSection {
     grid-template-columns: 1fr;
   }
 }
 .listSection {
+  height: inherit;
   font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .listHeader {
   font-size: 1.75rem;
@@ -84,11 +92,12 @@
 .code {
   background: #f0f0f0;
   border-radius: 0.5rem;
+  width: 100%;
   cursor: pointer;
-  padding: 0.7rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  padding: 0.5rem;
+  margin: -1.5rem 0;
+  font-size: 1rem;
+  font-family: Lucida Courier, monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -109,11 +118,11 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  min-width: 300px;
+  min-width: 250px;
   width: 100%;
   display: grid;
   grid-template-columns: 90% 10%;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
 .card:hover,
