--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -22,8 +22,8 @@
 
 .input {
   position: relative;
-  width: 1.5em;
-  height: 1.5em;
+  min-width: 1.5em;
+  min-height: 1.5em;
   color: #363839;
   border: 1px solid #bdc1c6;
   border-radius: 4px;
@@ -43,7 +43,7 @@
 .label {
   position: relative;
   cursor: pointer;
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight: 600;
   padding: 0 0.35em 0;
   user-select: none;
@@ -53,17 +53,22 @@
 .completed {
   content: attr(data-content);
   cursor: pointer;
-
   color: #9c9e9f;
   text-decoration: line-through;
   text-decoration-color: #363839;
   transition: clip-path 200ms cubic-bezier(0.45, 0.46, 0.45, 0.94);
-  font-size: 1.3em;
+  font-size: 1.1em;
   padding: 0 0.35em 0;
-
   width: fit-content;
   height: fit-content;
   font-weight: 600;
+}
+.todoMain {
+  display: flex;
+  align-items: center;
+  padding: 1.5rem;
+  cursor: pointer;
+  overflow-wrap: anywhere;
 }
 .remove {
   display: flex;
