--- a/src/components/Todos/todos.module.css
+++ b/src/components/Todos/todos.module.css
@@ -66,7 +66,7 @@
 .todoMain {
   display: flex;
   align-items: center;
-  padding: 1.5rem;
+  padding: 1.2rem;
   cursor: pointer;
   overflow-wrap: anywhere;
 }
@@ -110,4 +110,12 @@
 
 .highlightButton {
   box-shadow: 0 0 5px 5px #3792cb, 0 0 2px 2px #296bfe;
+}
+
+.listOption {
+  cursor: pointer;
+  border-left: #444 2px solid;
+  overflow-wrap: anywhere;
+  margin-top: 0.35rem;
+  padding-left: 0.2rem;
 }
